# cxlcli

./: LICENCE  README.md  setup.cfg
src/pycxlcli/: __init__.py  __version__.py  command_structure.py  cxl.py  cxl_cli.py  identify.py  identify_memory_device.py  linux_cxl_ioctl.py  linux_device.py  linux_utils.py  logs_gcc.py
