# SPDX-FileCopyrightText: 2022 The pydiskcmd Authors
#
# SPDX-License-Identifier: LGPL-2.1-or-later

[metadata]
name = PYCXLCLI
version = 0.0.1
description = "Communicate with CXL device using Linux's inbox device driver."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jackeichen/cxlcli
maintainer = Eric
maintainer_email = Eric-1128@outlook.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    cxlcli

[options]
packages = find:
package_dir =
    =src
python_requires = ~= 3.6
install_requires =
    Cython

[options.entry_points]
console_scripts =
    pycxl = pycxlcli.cxl_cli:CXLCli

[options.extras_require]
dev =
    isort
    mypy
    pre-commit
    pytest
    pytest-mypy
    setuptools>=42
    setuptools_scm[toml]>=3.4
    wheel

[options.packages.find]
where = src
include = py*
exclude =
    tests
